--- a/ios/LogInMenu/LogInMenuViewController.xib
+++ b/ios/LogInMenu/LogInMenuViewController.xib
@@ -11,7 +11,6 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LogInMenuViewController" customModule="ios" customModuleProvider="target">
             <connections>
                 <outlet property="detailInfo" destination="OBc-w3-aQ0" id="D4L-tl-9JJ"/>
-                <outlet property="fastO" destination="BPK-iw-eHR" id="2XQ-oz-sIp"/>
                 <outlet property="fixTopView" destination="zuP-yV-q2k" id="ZWG-AG-pim"/>
                 <outlet property="grayView" destination="CqE-WP-njl" id="0ZW-xF-eb4"/>
                 <outlet property="loginFiled" destination="zT6-jf-rVu" id="H3d-F4-y7G"/>
@@ -130,7 +129,7 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="tQ5-s7-yza">
                                             <rect key="frame" x="26" y="188" width="315" height="81"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kM0-AA-s54">
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kM0-AA-s54">
                                                     <rect key="frame" x="0.0" y="0.0" width="61" height="81"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="movie_reser" translatesAutoresizingMaskIntoConstraints="NO" id="pDK-Ak-V5g">
@@ -144,7 +143,7 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QUY-b7-dvT">
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QUY-b7-dvT">
                                                     <rect key="frame" x="85" y="0.0" width="61" height="81"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="theater" translatesAutoresizingMaskIntoConstraints="NO" id="RPr-Sg-Wnp">
@@ -158,7 +157,7 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8Ia-an-DI7">
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8Ia-an-DI7">
                                                     <rect key="frame" x="170" y="0.0" width="61" height="81"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="fastorder" translatesAutoresizingMaskIntoConstraints="NO" id="m7p-ND-0sR">
@@ -172,17 +171,18 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="BPK-iw-eHR">
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5va-Mj-zgu">
                                                     <rect key="frame" x="255" y="0.0" width="60" height="81"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ayn-Yy-b5u">
-                                                            <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
-                                                            <state key="normal" title="Button"/>
-                                                        </button>
-                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vCG-gj-jIL">
-                                                            <rect key="frame" x="0.0" y="35" width="60" height="46"/>
-                                                            <state key="normal" title="Button"/>
-                                                        </button>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="phototicket" translatesAutoresizingMaskIntoConstraints="NO" id="OSn-WL-bU5">
+                                                            <rect key="frame" x="0.0" y="0.0" width="60" height="59"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="포토티켓" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWq-vN-uhW">
+                                                            <rect key="frame" x="0.0" y="64" width="60" height="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
@@ -235,6 +235,7 @@
         <image name="fastorder" width="60" height="59"/>
         <image name="movie_reser" width="60" height="59"/>
         <image name="nologinpf" width="82" height="81"/>
+        <image name="phototicket" width="60" height="59"/>
         <image name="theater" width="60" height="59"/>
     </resources>
 </document>
