--- a/ios/LogIn/LInputViewController.xib
+++ b/ios/LogIn/LInputViewController.xib
@@ -18,86 +18,100 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bqL-1f-Rp9">
-                    <rect key="frame" x="67" y="124" width="280" height="224"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CHK-Kk-mJo">
+                    <rect key="frame" x="0.0" y="88" width="414" height="466"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="bp4-W2-TOT">
-                            <rect key="frame" x="10" y="10" width="260" height="204"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="login" translatesAutoresizingMaskIntoConstraints="NO" id="go2-Ms-Z1z">
+                            <rect key="frame" x="189" y="396" width="190" height="57"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bFP-0x-X1L">
+                            <rect key="frame" x="8" y="324" width="398" height="57"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <state key="normal" title="로그인">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                        </button>
+                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CGV 아이디" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dsr-jq-6QT">
+                            <rect key="frame" x="8" y="146" width="398" height="37"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CGV 비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RKy-eW-sXa">
+                            <rect key="frame" x="8" y="201" width="398" height="37"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JST-hX-xtx">
+                            <rect key="frame" x="44" y="267" width="65" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="자동로그인">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Au-zV-ehT">
+                            <rect key="frame" x="311" y="267" width="95" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="비회원 예매확인">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                        </button>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cgv_big" translatesAutoresizingMaskIntoConstraints="NO" id="Boj-2Y-LUC">
+                            <rect key="frame" x="140" y="31" width="135" height="85"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ItT-IN-gtG">
+                    <rect key="frame" x="0.0" y="554" width="414" height="342"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dxJ-GR-2Ip">
+                            <rect key="frame" x="45.5" y="23" width="323" height="30"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cgv_logo" translatesAutoresizingMaskIntoConstraints="NO" id="qry-zT-hux">
-                                    <rect key="frame" x="0.0" y="0.0" width="260" height="24"/>
-                                </imageView>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CGV 아이디" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cVw-hW-Hee">
-                                    <rect key="frame" x="0.0" y="38" width="260" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CGV 비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="29R-oF-CA5">
-                                    <rect key="frame" x="0.0" y="86" width="260" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fXj-C5-kmW">
-                                    <rect key="frame" x="0.0" y="134" width="260" height="30"/>
-                                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <color key="tintColor" red="0.94510692360000004" green="0.94508665800000002" blue="0.9450905919" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                    <state key="normal">
-                                        <attributedString key="attributedTitle">
-                                            <fragment content="로그인">
-                                                <attributes>
-                                                    <font key="NSFont" metaFont="system" size="15"/>
-                                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                                </attributes>
-                                            </fragment>
-                                        </attributedString>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjW-Wp-C1R">
+                                    <rect key="frame" x="0.0" y="0.0" width="65" height="30"/>
+                                    <state key="normal" title="아이디찾기">
+                                        <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </state>
                                 </button>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="gBg-95-m9E">
-                                    <rect key="frame" x="0.0" y="178" width="260" height="26"/>
-                                    <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b3x-3Z-gQg">
-                                            <rect key="frame" x="0.0" y="0.0" width="68" height="26"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <state key="normal" title="아이디찾기">
-                                                <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            </state>
-                                        </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2jG-Wc-Vsh">
-                                            <rect key="frame" x="83" y="0.0" width="58" height="26"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <state key="normal" title="비밀번호찾기">
-                                                <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            </state>
-                                        </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XYE-ml-7DC">
-                                            <rect key="frame" x="156" y="0.0" width="104" height="26"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <state key="normal" title="CJ ONE 통합 회원가입">
-                                                <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="tapSignUp:" destination="-1" eventType="touchUpInside" id="2js-yz-yp5"/>
-                                            </connections>
-                                        </button>
-                                    </subviews>
-                                </stackView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NlK-fj-QA5">
+                                    <rect key="frame" x="85" y="0.0" width="78" height="30"/>
+                                    <state key="normal" title="비밀번호찾기">
+                                        <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Sp-bS-mM0">
+                                    <rect key="frame" x="183" y="0.0" width="140" height="30"/>
+                                    <state key="normal" title="CJ ONE 통합 회원가입">
+                                        <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                </button>
                             </subviews>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="280" id="7C9-3K-mEd"/>
-                        <constraint firstItem="bp4-W2-TOT" firstAttribute="leading" secondItem="bqL-1f-Rp9" secondAttribute="leading" constant="10" id="7w0-ni-BVe"/>
-                        <constraint firstItem="bp4-W2-TOT" firstAttribute="top" secondItem="bqL-1f-Rp9" secondAttribute="top" constant="10" id="HYn-Q4-IFX"/>
-                        <constraint firstAttribute="bottom" secondItem="bp4-W2-TOT" secondAttribute="bottom" constant="10" id="JTD-pa-VbN"/>
-                        <constraint firstAttribute="trailing" secondItem="bp4-W2-TOT" secondAttribute="trailing" constant="10" id="nzl-M7-1iD"/>
+                        <constraint firstItem="dxJ-GR-2Ip" firstAttribute="top" secondItem="ItT-IN-gtG" secondAttribute="top" constant="23" id="59f-Yg-qkX"/>
+                        <constraint firstAttribute="bottom" secondItem="dxJ-GR-2Ip" secondAttribute="bottom" constant="289" id="eYP-Qb-8o8"/>
+                        <constraint firstItem="dxJ-GR-2Ip" firstAttribute="centerX" secondItem="ItT-IN-gtG" secondAttribute="centerX" id="eYe-OT-1gC"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="bqL-1f-Rp9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="8Q8-cF-VQE"/>
-                <constraint firstItem="bqL-1f-Rp9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="36" id="9qp-0n-U7I"/>
+                <constraint firstItem="ItT-IN-gtG" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="3dj-Si-Jrc"/>
+                <constraint firstItem="CHK-Kk-mJo" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ExV-Ap-wyX"/>
+                <constraint firstItem="ItT-IN-gtG" firstAttribute="top" secondItem="CHK-Kk-mJo" secondAttribute="bottom" id="GUi-xQ-JjE"/>
+                <constraint firstItem="CHK-Kk-mJo" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="LNd-92-gJC"/>
+                <constraint firstAttribute="bottom" secondItem="ItT-IN-gtG" secondAttribute="bottom" id="ffE-v1-u4l"/>
+                <constraint firstItem="ItT-IN-gtG" firstAttribute="top" secondItem="CHK-Kk-mJo" secondAttribute="bottom" id="nFM-kV-C7F"/>
+                <constraint firstItem="ItT-IN-gtG" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="s2Q-DX-UcI"/>
+                <constraint firstItem="CHK-Kk-mJo" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="xiE-Vm-rWp"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
@@ -105,6 +119,7 @@
         </view>
     </objects>
     <resources>
-        <image name="cgv_logo" width="55" height="24"/>
+        <image name="cgv_big" width="198" height="97"/>
+        <image name="login" width="327" height="87"/>
     </resources>
 </document>
