--- a/ios/TheaterReservation/TheaterRViewController.xib
+++ b/ios/TheaterReservation/TheaterRViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TheaterRViewController" customModule="ios" customModuleProvider="target">
             <connections>
+                <outlet property="bigCtiyPicker" destination="XSv-R5-1uW" id="hKe-5G-9hG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -23,7 +24,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v5N-Kn-6Tf">
-                            <rect key="frame" x="0.0" y="604" width="414" height="68"/>
+                            <rect key="frame" x="0.0" y="599" width="414" height="68"/>
                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="68" id="6Di-YJ-Fvi"/>
@@ -34,12 +35,34 @@
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                         </button>
+                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VgG-WJ-lj0">
+                            <rect key="frame" x="0.0" y="69" width="414" height="530"/>
+                            <subviews>
+                                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XSv-R5-1uW" userLabel="regionBig">
+                                    <rect key="frame" x="0.0" y="0.0" width="124" height="530"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="aYg-oR-ate" id="bhP-CR-o7W"/>
+                                    </connections>
+                                </pickerView>
+                                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="quo-7i-vkH" userLabel="regionDetail">
+                                    <rect key="frame" x="124" y="0.0" width="290" height="530"/>
+                                </pickerView>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="XSv-R5-1uW" firstAttribute="width" secondItem="VgG-WJ-lj0" secondAttribute="width" multiplier="0.3" id="9We-ja-M3W"/>
+                                <constraint firstAttribute="width" secondItem="VgG-WJ-lj0" secondAttribute="height" multiplier="207:265" id="bV0-VJ-k0C"/>
+                                <constraint firstAttribute="height" constant="530" id="e01-Ts-uXS"/>
+                            </constraints>
+                        </stackView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="v5N-Kn-6Tf" firstAttribute="trailing" secondItem="oEW-Hh-ru8" secondAttribute="trailing" id="2x0-qS-36s"/>
+                        <constraint firstItem="VgG-WJ-lj0" firstAttribute="trailing" secondItem="oEW-Hh-ru8" secondAttribute="trailing" id="G21-s3-O1p"/>
                         <constraint firstItem="v5N-Kn-6Tf" firstAttribute="leading" secondItem="oEW-Hh-ru8" secondAttribute="leading" id="RGw-J3-lMz"/>
-                        <constraint firstItem="oEW-Hh-ru8" firstAttribute="bottom" secondItem="v5N-Kn-6Tf" secondAttribute="bottom" constant="146" id="RYW-iX-mcM"/>
+                        <constraint firstItem="oEW-Hh-ru8" firstAttribute="bottom" secondItem="v5N-Kn-6Tf" secondAttribute="bottom" constant="151" id="RYW-iX-mcM"/>
+                        <constraint firstItem="VgG-WJ-lj0" firstAttribute="leading" secondItem="oEW-Hh-ru8" secondAttribute="leading" id="dOs-8G-U01"/>
+                        <constraint firstItem="v5N-Kn-6Tf" firstAttribute="top" secondItem="VgG-WJ-lj0" secondAttribute="bottom" id="mRY-85-Tn2"/>
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="oEW-Hh-ru8"/>
                 </view>
